@@ -1644,12 +1644,12 @@ libxml_xmlFreeTextReader(ATTRIBUTE_UNUSED PyObject *self, PyObject *args) {
     xmlTextReaderErrorFunc f;
     void *arg;
 
-    if (self == NULL) {
+    if (!PyArg_ParseTuple(args, (char *)"O:xmlFreeTextReader", &pyobj_reader))
+        return(NULL);
+    if (!PyCObject_Check(pyobj_reader)) {
 	Py_INCREF(Py_None);
 	return(Py_None);
     }
-    if (!PyArg_ParseTuple(args, (char *)"O:xmlFreeTextReader", &pyobj_reader))
-        return(NULL);
     reader = (xmlTextReaderPtr) PyxmlTextReader_Get(pyobj_reader);
     if (reader == NULL) {
 	Py_INCREF(Py_None);
